2018-2-8 raw_monitor添加切换失败TOP小区监控，对满足门限小区关闭其切换测量开关； 2018-2-13 raw_monitor高流量小区监控，支持对满足调整基站关闭M8012测量； 2018-2-13 raw_monitor春节劣化小区监控，分别为低接通、高掉线小区；

--- a/AutoMonitor/config.ini
+++ b/AutoMonitor/config.ini
@@ -7,43 +7,47 @@ timeint = 7
 [raw_monitor_report]
 # 激活相关报告，设置为1；不激活相关报告，设置为 0
 #休眠小区，有随机接入申请，但是全部失败
-active_sleep_cell_report = 1
+active_sleep_cell_report = 0
 #可用率异常小区
-active_available_report = 1
+active_available_report = 0
 # volte高掉话小区
-active_volte_drop_report = 1
+active_volte_drop_report = 0
 # esrvcc切换差小区
-active_srvcc_report = 1
+active_srvcc_report = 0
 # volte低接通小区,小于1erl小区监控
-active_volte_connect_report = 1
+active_volte_connect_report = 0
 # volte低接通小区，大于1erl小区监控
-active_volte_connect_1_report = 1
+active_volte_connect_1_report = 0
 # 高拥塞小区
-active_overcrowding_report = 1
+active_overcrowding_report = 0
 # QCI1上下行丢包率
-active_volte_packet_loss_report = 1
+active_volte_packet_loss_report = 0
 # GPS故障小区
-active_gps_alarm_report = 1
+active_gps_alarm_report = 0
 # 休眠小区
-active_sleep_cell_1_report = 1
+active_sleep_cell_1_report = 0
 # 休眠及零流量小区
-active_sleep_cell_2_report = 1
+active_sleep_cell_2_report = 0
 # 最大激活用户数检测
-active_maxue_report = 1
+active_maxue_report = 0
 # 高流量小区检测
-active_highload_report = 1
+active_highload_report = 0
+# 切换失败top小区
+active_handover_report = 0
+# 春节保障劣化小区
+active_cj_top_report = 1
 
 [config]
 # 自动关闭测量功能总开关
 # 当监控粒度设置为 raw_monitor 且 autodisabledpmmeasurement设置为 1 时激活此功能，设置为 0 或 空 时关闭此功能
-autodisabledpmmeasurement = 0
+autodisabledpmmeasurement = 1
 
 #-------------------------------------------------------
 # 以下是相关指标的开关
 # 高拥塞小区
 enable_overcrowding = 1
 # 当拥塞次数 > overcrowding_num时，进行通报处理；
-overcrowding_num = 500
+overcrowding_num = 0
 
 #-------------------------------------------------------
 # esrvcc切换准备TOP小区
@@ -82,5 +86,12 @@ drop_b2Threshold1GERANQci1 = -95
 drop_b2Threshold2RssiGERANQci1 = -90
 
 #--------------------------------------------------------
-# 高流量小区，暂不支持调整
+# 高流量小区
 enable_highload = 0
+
+#--------------------------------------------------------
+# 切换失败TOP小区
+enable_handover = 0
+
+# 春节劣化小区
+enable_cj_top = 1
