--- a/AutoMonitor/config_sql.ini
+++ b/AutoMonitor/config_sql.ini
@@ -46,6 +46,10 @@ cell_hour_all_lowconnect = cell_hour_all_lowconnect,cell,raw
 高流量小区_hour = 高流量小区_hour,cell,hour
 ;2018-1-24 新增
 高流量小区_day = 高流量小区_day,cell,hour
+;2018-2-8 新增
+handover_raw = handover_raw,cell,raw
+;2018-2-14 新增
+春节劣化小区 = 春节劣化小区,cell,raw
 [kpi]
 # 指标名称需要与sql中设置的一致，否则会匹配不到对应的指标；
 # 设置警告门限，逻辑符号与门限值用 ‘,’隔开，如：RRC连接建立成功率 = <=,99   此时当 RRC连接建立成功率 小于等于 99 时，结果呈现时会将指标显示为 加粗红色
@@ -163,14 +167,19 @@ PUSCH_RIP = >=, -110
 # 切换成功率TOP小区
 [top_handover]
 sdate = '',''
+查询时间 = '',''
 enb_cell = '',cellname
 bts_version = '',''
 切换成功率QQ = '',''
+切换成功率ZB = '',''
 切换成功次数 = '',''
 切换请求次数ZB = '',''
 切换请求次数QQ = '',''
 切换失败次数QQ = !=, 0
+切换失败次数ZB = !=, 0
 PUSCH_RIP = >=, -110
+mtIntereNBHo_8014 = '',''
+mtIntraeNBHo_8009 = '',''
 
 # 无线掉线率TOP小区
 [top_radiodrop]
@@ -371,8 +380,25 @@ QCI1话务量ERL = '',''
 SDATE = '',''
 ENB_CELL = '',cellname
 业务量GB = '',''
-RRC最大连接数 = '',''
+RRC最大连接数 = >,200
+有效RRC连接最大数 = >,50
+上行PRB平均利用率NEW = >,50
+下行PRB平均利用率NEW = >,50
+PDCCH信道CCE占用率 = >,50
+
+# 春节劣化小区监控
+[春节劣化小区]
+SDATE = '',''
+ENB_CELL = '',cellname
+RRC连接建立成功率 = '',''
+ERAB建立成功率 = '',''
+无线接通率 = <,95
+无线掉线率 = >,5
+ERAB掉线率 = '',''
+平均激活用户数 = '',''
+最大激活用户数 = '',''
+RRC最大连接数 = >,90
+拥塞次数 = '',''
+有效RRC连接平均数 = '',''
 有效RRC连接最大数 = '',''
-上行PRB平均利用率NEW = '',''
-下行PRB平均利用率NEW = '',''
-PDCCH信道CCE占用率 = '',''
+PUSCH_RIP = >,-110
