2017-12-14 支持微站log的解码，并对dacword值异常的判断新增上下门限； 2018-4-28  修复解码单站点多个时段数据时显示结果均为最后一个时段的值bug；

--- a/xml_tools/Auto_GPS_Freq_check/config.ini
+++ b/xml_tools/Auto_GPS_Freq_check/config.ini
@@ -1,9 +1,9 @@
 ﻿[main]
 # 是否在线获取数据
-online_get_file = 1
+online_get_file = 0
 
 # 当启用在线获取数据时，自动删除 程序目录/TEMP 文件夹中的历史数据，设置为 1 时启动自动删除，设置为 0 时不启动自动删除
-auto_delete = 1
+auto_delete = 0
 
 # 并发连接基站数，此数值越大，获取基站数据用时越少，但不宜设置太大，控制在100以内；
 # 并发数设置越大，电脑负荷越高，使用时请注意电脑负荷，如电脑负荷过大反而会花费更多的时间；
@@ -11,16 +11,17 @@ concurrent = 50
 
 # 获取时段数，生成文件里面10分钟生成一条数据，如果要获取一个小时数据，则填 6
 # 默认填 1，获取最近一条数据；
-items = 1
+items = 9999
 
 # 激活异常检测， 1 为启用， 0或空 不启用
 gps_error_check = 1
 
-# GPS异常门限
+# GPS异常门限，如下设置值表示 5000 >= dacword >= 3500 时，判断GPS为异常；
 dacword = 3500
+dacword_a = 5000
 
-# 是否自动闭锁小区， 0或空 不启用（此功能暂不可用）
-auto_locked = block
+# 是否自动闭锁小区， 0或空 不启用；设置为 block 时 为启动此功能
+auto_locked = 0
 
 # 设置自动启用闭锁功能的时段，在此时段内的才会执行自动闭锁功能
 # 如要在 0点时段 启动闭锁功能，则填 00 （注意，此时段需要两位数），多个时段间用 逗号 隔开
