2018-4-23 支持按邻区频点计算频点对应覆盖率（友商竞对MR覆盖率）

--- a/MRparse/MR_parser/config.ini
+++ b/MRparse/MR_parser/config.ini
@@ -12,14 +12,14 @@ parse_type = all
 # 设置为 'gz' 则处理tar.gz
 # 设置为 'xml'  则处理xml文档
 # 不填则自动判断文件格式
-file_type = gz
+file_type = xml
 
 #MR原始数据存放目录
 # source_path = C:\Users\lxute\Desktop\工作临时文件夹\mrs
-source_path = D:\test
+source_path = D:\test\mro
 
 #MR解码结果存放目录
-target_path = D:\test
+target_path = D:\test\mro
 #target_path = C:\Users\lxute\Desktop\工作临时文件夹\mrs
 
 #汇总类型可以为  hour,sum
