2018-5-22 raw_monitor模块增加volte掉话率监控（当天累计，掉话率超过门限）；

--- a/AutoMonitor/config.ini
+++ b/AutoMonitor/config.ini
@@ -10,8 +10,10 @@ timeint = 7
 active_sleep_cell_report = 0
 #可用率异常小区
 active_available_report = 0
-# volte高掉话小区
+# volte高掉话小区（按上一个15分钟掉话次数统计）
 active_volte_drop_report = 0
+# volte高掉话小区（按当天累计掉话率及话务量统计通报）
+active_volte_drop_report_add_up = 1
 # esrvcc切换差小区
 active_srvcc_report = 0
 # volte低接通小区,小于1erl小区监控
@@ -35,12 +37,12 @@ active_highload_report = 0
 # 切换失败top小区
 active_handover_report = 0
 # 春节保障劣化小区
-active_cj_top_report = 1
+active_cj_top_report = 0
 
 [config]
 # 自动关闭测量功能总开关
 # 当监控粒度设置为 raw_monitor 且 autodisabledpmmeasurement设置为 1 时激活此功能，设置为 0 或 空 时关闭此功能
-autodisabledpmmeasurement = 1
+autodisabledpmmeasurement = 0
 
 #-------------------------------------------------------
 # 以下是相关指标的开关
