--- a/AutoMonitor/config_sql.ini
+++ b/AutoMonitor/config_sql.ini
@@ -50,6 +50,8 @@ cell_hour_all_lowconnect = cell_hour_all_lowconnect,cell,raw
 handover_raw = handover_raw,cell,raw
 ;2018-2-14 新增
 春节劣化小区 = 春节劣化小区,cell,raw
+# 2018-5-21 新增
+cell_raw_all_volte_drop = cell_raw_all_volte_drop,cell,raw
 [kpi]
 # 指标名称需要与sql中设置的一致，否则会匹配不到对应的指标；
 # 设置警告门限，逻辑符号与门限值用 ‘,’隔开，如：RRC连接建立成功率 = <=,99   此时当 RRC连接建立成功率 小于等于 99 时，结果呈现时会将指标显示为 加粗红色
@@ -133,6 +135,11 @@ QCI1话务量Erl_亿阳 = '',''
 QCI2话务量Erl = '',''
 QCI1最大用户数 = '',''
 QCI2最大用户数 = '',''
+QCI1掉线率 = >,2
+QCI1掉线分母 = '',''
+PHR小于0比例 = >,50
+PUSCH_RIP = >=,-110
+QCI1话务量Erl_all = '',''
 
 # RRC连接建立成功率TOP小区
 [top_rrcconnect]
@@ -225,7 +232,7 @@ BTS_VERSION = '',''
 管理员闭锁状态 = '',''
 EARFCN = '',''
 TYPE = '',''
-可用率 = '',''
+可用率 = <,90
 RRC连接数 = '',''
 最大RRC连接数 = '',''
 RRC连接建立成功次数 = '',''
@@ -385,6 +392,7 @@ RRC最大连接数 = >,200
 上行PRB平均利用率NEW = >,50
 下行PRB平均利用率NEW = >,50
 PDCCH信道CCE占用率 = >,50
+mtCellThruput_8012 = '',''
 
 # 春节劣化小区监控
 [春节劣化小区]
@@ -401,4 +409,4 @@ RRC最大连接数 = >,90
 拥塞次数 = '',''
 有效RRC连接平均数 = '',''
 有效RRC连接最大数 = '',''
-PUSCH_RIP = >,-110
+PUSCH_RIP = >=,-110
