--- a/MRparse/MR_parser/config.ini
+++ b/MRparse/MR_parser/config.ini
@@ -6,7 +6,7 @@
 process = max
 
 #支持处理MRO MRS两种类型，设置为 all 则两种类型的MR数据均处理
-parse_type = all
+parse_type = mro
 
 # 支持直接读取 tar.gz 文档
 # 设置为 'gz' 则处理tar.gz
@@ -26,7 +26,7 @@ target_path = D:\test\mro
 #设置为 hour 时，会按每个小时进行汇总，每小时会出一条数据
 #设置为 sum 时，则会按照 ECID 进行汇总，每 ECID 会出一条数据
 #如果两者都需要，则设置为  hour,sum
-gather_type = sum
+gather_type = sum,hour
 
 #定时功能,设置为 1 则激活，设置为 0 或 空 则不激活
 #当激活定时功能时，会默认读取 source_path\昨天（格式为 yyyymmdd ) 下的文件，解码结果则存放在local_path\昨天（格式为 yyymmdd) 下
@@ -48,7 +48,7 @@ mro_rsrp_standard = 141
 # 需要生成的mro解码结果
 # 目前支持 mro_main,mro_ecid,mro_rsrp,mro_aoa
 # 处理多张表用 ， 隔开
-mro_parse_sheet = mro_rsrp
+mro_parse_sheet = mro_main
 
 #CMCC重叠覆盖率
 #小区同频重叠覆盖度为主小区RSRP-邻小区 RSRP<6dB的邻小区>=3的采样点数【主小区RSRP>=-110dbm且主邻小区频点相同】
