--- a/MRparse/MR_parser/config.ini
+++ b/MRparse/MR_parser/config.ini
@@ -12,14 +12,15 @@ parse_type = mro
 # 设置为 'gz' 则处理tar.gz
 # 设置为 'xml'  则处理xml文档
 # 不填则自动判断文件格式
-file_type = xml
+file_type = gz
 
 #MR原始数据存放目录
 # source_path = C:\Users\lxute\Desktop\工作临时文件夹\mrs
-source_path = D:\test\mro
+source_path = E:\mr
 
 #MR解码结果存放目录
-target_path = D:\test\mro
+target_path = E:\mr
+
 #target_path = C:\Users\lxute\Desktop\工作临时文件夹\mrs
 
 #汇总类型可以为  hour,sum
@@ -46,9 +47,9 @@ mrs_exception_sheet = MR.RIPPRB
 mro_rsrp_standard = 141
 
 # 需要生成的mro解码结果
-# 目前支持 mro_main,mro_ecid,mro_rsrp,mro_aoa
+# 目前支持 mro_main,mro_ecid,mro_rsrp,mro_aoa,mro_earfcn,mro_rsrp_mdt
 # 处理多张表用 ， 隔开
-mro_parse_sheet = mro_main
+mro_parse_sheet = mro_rsrp
 
 #CMCC重叠覆盖率
 #小区同频重叠覆盖度为主小区RSRP-邻小区 RSRP<6dB的邻小区>=3的采样点数【主小区RSRP>=-110dbm且主邻小区频点相同】
