2018-7-25 添加MDT重叠覆盖解析，当mro_parse_sheet设置为mro_rsrp_mdt时，新增生成mro_mdt_overlap.csv；

--- a/MRparse/MR_parser/config.ini
+++ b/MRparse/MR_parser/config.ini
@@ -16,10 +16,10 @@ file_type = gz
 
 #MR原始数据存放目录
 # source_path = C:\Users\lxute\Desktop\工作临时文件夹\mrs
-source_path = E:\mr
+source_path = E:\mr\MDT
 
 #MR解码结果存放目录
-target_path = E:\mr
+target_path = E:\mr\MDT
 
 #target_path = C:\Users\lxute\Desktop\工作临时文件夹\mrs
 
@@ -47,9 +47,9 @@ mrs_exception_sheet = MR.RIPPRB
 mro_rsrp_standard = 141
 
 # 需要生成的mro解码结果
-# 目前支持 mro_main,mro_ecid,mro_rsrp,mro_aoa,mro_earfcn,mro_rsrp_mdt
+# 目前支持 mro_main,mro_ecid,mro_rsrp,mro_aoa,mro_earfcn,mro_rsrp_mdt,mro_report_num
 # 处理多张表用 ， 隔开
-mro_parse_sheet = mro_rsrp
+mro_parse_sheet = mro_report_num
 
 #CMCC重叠覆盖率
 #小区同频重叠覆盖度为主小区RSRP-邻小区 RSRP<6dB的邻小区>=3的采样点数【主小区RSRP>=-110dbm且主邻小区频点相同】
