2018-6-13 raw_monitor模块增加volte掉话率监控（当天累计，掉话率超过门限）可自动关闭测量；

--- a/MRparse/MR_parser/_config/config.ini
+++ b/MRparse/MR_parser/_config/config.ini
@@ -12,14 +12,14 @@ parse_type = mro
 # 设置为 'gz' 则处理tar.gz
 # 设置为 'xml'  则处理xml文档
 # 不填则自动判断文件格式
-file_type = xml
+file_type = gz
 
 #MR原始数据存放目录
 # source_path = C:\Users\lxute\Desktop\工作临时文件夹\mrs
-source_path = E:\mr\MDT
+source_path = E:\mr\earfcn
 
 #MR解码结果存放目录
-target_path = E:\mr\MDT
+target_path = E:\mr\earfcn
 
 #target_path = C:\Users\lxute\Desktop\工作临时文件夹\mrs
 
@@ -49,7 +49,7 @@ mro_rsrp_standard = 141
 # 需要生成的mro解码结果
 # 目前支持 mro_main,mro_ecid,mro_rsrp,mro_aoa,mro_earfcn,mro_rsrp_mdt,mro_report_num
 # 处理多张表用 ， 隔开
-mro_parse_sheet = mro_rsrp_mdt
+mro_parse_sheet = mro_earfcn
 
 #CMCC重叠覆盖率
 #小区同频重叠覆盖度为主小区RSRP-邻小区 RSRP<6dB的邻小区>=3的采样点数【主小区RSRP>=-110dbm且主邻小区频点相同】
@@ -61,7 +61,9 @@ cmcc_overlap_ncell_num = 3
 mr_lap = -110
 
 # MRO解码MDT中ue报告点与小区方位角偏差异常门限值(小区方位角-ue与小区所成方位角）
-azi_offset = 60
+azi_offset = 90
+# MRO解码MDT中ue报告点与基站距离在ue_distance_excepy范围内的排除不统计为异常方位角
+ue_distance_excepy = 50
 # MRO解码MDT中ue报告点方位角异常采样点占比值为异常
 azi_offset_range = 0.5
 
