2018-9-17 算法优化;添加激活文件过滤时，是否提取符合过滤条件的文件字段；

--- a/MRparse/MR_parser/_config/config.ini
+++ b/MRparse/MR_parser/_config/config.ini
@@ -16,10 +16,10 @@ file_type = gz
 
 #MR原始数据存放目录
 # source_path = C:\Users\lxute\Desktop\工作临时文件夹\mrs
-source_path = E:\mr\earfcn
+source_path = E:\mr\earfcn\华为MDT
 
 #MR解码结果存放目录
-target_path = E:\mr\earfcn
+target_path = E:\mr\earfcn\华为MDT
 
 #target_path = C:\Users\lxute\Desktop\工作临时文件夹\mrs
 
@@ -49,7 +49,7 @@ mro_rsrp_standard = 141
 # 需要生成的mro解码结果
 # 目前支持 mro_main,mro_ecid,mro_rsrp,mro_aoa,mro_earfcn,mro_rsrp_mdt,mro_report_num
 # 处理多张表用 ， 隔开
-mro_parse_sheet = mro_earfcn
+mro_parse_sheet = mro_rsrp,mro_rsrp_mdt
 
 #CMCC重叠覆盖率
 #小区同频重叠覆盖度为主小区RSRP-邻小区 RSRP<6dB的邻小区>=3的采样点数【主小区RSRP>=-110dbm且主邻小区频点相同】
@@ -76,7 +76,9 @@ azi_offset_range = 0.5
 # filter_type 可以设置为 mro或 mrs , 都要的话，则设置为 mro,mrs 或 空
 # filter_id 可以设置为需要解码的ENBID，多个间使用 , 隔开
 # filter_hour 可以设置需要解码的时段（小时），多个时段使用 , 隔开（时段需使用两位数，如提取1:00时段的，需填 01）
+# extract_source_file 可以设置是否将符合过滤条件的原始文件提取出来，设置为1时为允许提取，设置为0时不提取；
 active_filter = 0
 filter_type = mro
-filter_id = 659712,659713
-filter_hour = 12
+filter_id = 701886
+filter_hour =
+extract_source_file = 0
