2018-11-7 算法优化,提高解析效率；

--- a/MRparse/MR_parser/_config/config.ini
+++ b/MRparse/MR_parser/_config/config.ini
@@ -1,4 +1,4 @@
-﻿[main]
+[main]
 # 多线程，请跟进cpu核心设置，可以输入数字
 # 如果不清楚电脑多少核心，可以输入'min','mid','max'
 # 其中，min为单线程；mid为电脑核心的一半；max为满负荷运行
@@ -37,7 +37,7 @@ timing =
 [MRS]
 #处理MRsheet，如果只需要MR中的某个sheet，则可以在这里设置
 ;mrs_parse_sheet = MR.RSRP
-mrs_parse_sheet = MR.RSRP
+mrs_parse_sheet =
 
 #例外，因MR文件全部解码的话会比较慢且耗费内存，而有些sheet并不需要用到，则可以在这里设置不解码
 mrs_exception_sheet = MR.RIPPRB
